вынес статусную модель и приоритеты в enum